# svklib

./: CMakeLists.txt  LICENSE
core/: log.cpp  validation.cpp  vkswapchain.cpp  window.cpp
examples/: CMakeLists.txt  window.cpp
examples/shaders/: triangle.frag  triangle.vert
examples/triangle/: triangle.cpp
examples/window/: window.cpp
include/: buffer.hpp  commandpool.hpp  fileutil.hpp  log.hpp  shader.hpp  validation.hpp  vkdevice.hpp  vkfence.hpp  vkpipeline.hpp  vkrenderpass.hpp  vksemaphore.hpp  vkswapchain.hpp  window.hpp
